# moomoo-api-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY_AUDIT_REPORT.md  docker-compose.yml  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/docker_compose_20260311/: index.md  plan.md  spec.md
conductor/archive/global_limit_20260311/: plan.md  spec.md
conductor/archive/sec_audit_20260309/: index.md  plan.md  spec.md
conductor/archive/session_risk_management_20260309/: metadata.json
conductor/archive/sse_docker_20260311/: index.md  plan.md
conductor/tracks/docker_compose_20260311/: metadata.json  plan.md
conductor/tracks/global_limit_20260311/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/sec_audit_20260309/: metadata.json  plan.md
conductor/tracks/session_risk_management_20260309/: plan.md  spec.md
conductor/tracks/sse_docker_20260311/: metadata.json  plan.md  spec.md
skills/: moomoo-news-trader.skill
skills/moomoo-news-trader/: SKILL.md
skills/moomoo-news-trader/references/: sentiment_criteria.md
src/moomoo_mcp/: server.py
src/moomoo_mcp/services/: risk_management_service.py  session_service.py  trade_service.py
src/moomoo_mcp/tools/: session.py
tests/: test_server_cli.py
tests/test_services/: test_risk_management_service.py  test_session_service.py  test_trade_risk_integration.py
