[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moomoo_mcp"]

[project]
name = "moomoo-api-mcp"
version = "0.1.7"
description = "Moomoo API MCP Server"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Yichen Lu", email = "yichen.lu529@gamil.com" }
]
keywords = ["mcp", "moomoo", "trading", "finance", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Topic :: Office/Business :: Financial :: Investment",
]
urls.Repository = "https://github.com/Litash/moomoo-api-mcp"
urls.Issues = "https://github.com/Litash/moomoo-api-mcp/issues"
dependencies = [
    "mcp>=1.0.0",
    "moomoo-api>=3.3.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.48",
]

[project.scripts]
moomoo-api-mcp = "moomoo_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]

[tool.ruff.lint.isort]
known-first-party = ["moomoo_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
